# utreexo

./: README.md  perf-stats.ipynb  rust-toolchain
acc-data/: acc-after-10.txt  acc-after-11.txt  acc-after-12.txt  acc-after-16.txt  acc-after-2.txt  acc-after-23.txt  acc-after-24.txt  acc-after-25.txt  acc-after-3.txt  acc-after-30.txt  acc-after-31.txt  acc-after-32.txt  acc-after-33.txt  acc-after-34.txt  acc-after-4.txt  acc-after-8.txt  acc-before-10.txt  acc-before-14.txt  acc-before-15.txt  acc-before-16.txt  acc-before-18.txt  acc-before-19.txt  acc-before-20.txt  acc-before-21.txt  acc-before-22.txt  acc-before-23.txt  acc-before-27.txt  acc-before-28.txt  acc-before-29.txt  acc-before-30.txt  acc-before-6.txt  acc-before-7.txt  acc-before-8.txt  block-1.txt  block-10.txt  block-11.txt  block-12.txt  block-13.txt  block-14.txt  block-15.txt  (+27 more)
acc-data/block-103txs/: block.txt  input-leaf-hashes.txt
acc-data/block-104txs/: block.txt  input-leaf-hashes.txt
acc-data/block-107txs/: block.txt  input-leaf-hashes.txt
acc-data/block-108txs/: block.txt  input-leaf-hashes.txt
acc-data/block-10txs/: acc-after.txt  acc-beffore.txt  block.txt  input-leaf-hashes.txt
acc-data/block-110txs/: block.txt  input-leaf-hashes.txt
acc-data/block-111txs/: block.txt  input-leaf-hashes.txt
acc-data/block-112txs/: block.txt  input-leaf-hashes.txt
acc-data/block-113txs/: block.txt  input-leaf-hashes.txt
acc-data/block-114txs/: block.txt  input-leaf-hashes.txt
acc-data/block-115txs/: block.txt  input-leaf-hashes.txt
acc-data/block-116txs/: block.txt  input-leaf-hashes.txt
acc-data/block-117txs/: block.txt  input-leaf-hashes.txt
acc-data/block-118txs/: block.txt  input-leaf-hashes.txt
acc-data/block-11txs/: acc-after.txt  acc-beffore.txt  block.txt  input-leaf-hashes.txt
acc-data/block-120txs/: block.txt  input-leaf-hashes.txt
acc-data/block-123txs/: block.txt  input-leaf-hashes.txt
acc-data/block-124txs/: block.txt  input-leaf-hashes.txt
acc-data/block-125txs/: block.txt  input-leaf-hashes.txt
acc-data/block-126txs/: block.txt  input-leaf-hashes.txt
acc-data/block-127txs/: block.txt  input-leaf-hashes.txt
acc-data/block-128txs/: block.txt  input-leaf-hashes.txt
acc-data/block-129txs/: block.txt  (+1 more)
metrics-cycles/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  4.json  5.json  6.json  7.json  8.json  850.json  9.json
program/utreexo/: Cargo.toml
program/utreexo/elf/: riscv32im-succinct-zkvm-elf
program/utreexo/src/: btc_structs.rs  main.rs  process_block.rs
script/: Cargo.toml  build.rs
script/block-13txs/: block.txt  input-leaf-hashes.txt
script/block-2txs/: acc-beffore.txt
script/block-3txs/: acc-after.txt  acc-beffore.txt  block.txt  input-leaf-hashes.txt
script/block-4txs/: acc-beffore.txt
script/block-5txs/: acc-after.txt  acc-beffore.txt
script/block-6txs/: acc-after.txt  acc-beffore.txt  block.txt
(+384 files in other folders)
