[package]
version = "0.1.0"
name = "btcx-script"
edition = "2021"

[[bin]]
name = "verify"
path = "src/bin/verify.rs"

[[bin]]
name = "retarget"
path = "src/bin/retarget.rs"

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", rev = "v1.0.2-testnet" }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
alloy-sol-types = "0.7.2"
hex = "0.4.3"

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", rev = "v1.0.2-testnet" }
